Fixing of various issues tied to dark mode and RES.

--- a/src/_commentarea.less
+++ b/src/_commentarea.less
@@ -96,22 +96,7 @@
 
   .md ul,
   .thing .md ol {
-    border-right: solid 1px @almost-white;
-    border-left: solid 1px @almost-white;
-    border-top: solid 1px @almost-white;
-    line-height: 20px;
-    font-size: 14px;
-    padding: 0;
-
-    li {
-      border-bottom: solid 1px @almost-white;
-      background-color: #f8f8f8;
-      padding: 5px;
-
-      &:nth-child(odd) {
-        background-color: #f2f2f2;
-      }
-    }
+    .zebra-table;
   }
 
   .md ul {
