--- a/src/_siteTable.less
+++ b/src/_siteTable.less
@@ -34,22 +34,7 @@
 
     ol,
     ul {
-      border-right: solid 1px @almost-white;
-      border-left: solid 1px @almost-white;
-      border-top: solid 1px @almost-white;
-      line-height: 20px;
-      font-size: 14px;
-      padding: 0;
-
-      li {
-        border-bottom: solid 1px @almost-white;
-        background-color: #f8f8f8;
-        padding: 5px;
-
-        &:nth-child(odd) {
-          background-color: #f2f2f2;
-        }
-      }
+      .zebra-table;
     }
 
     ul {
